Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5, 6.6, 6.7.0 Beta1
-
None
-
Linux Fedora 39, x86_64, Qt 6.5+
-
-
91bfef367 (dev), 7fd8d5ba6 (6.7), 50878e43b (6.6), b8b042b2b (tqtc/lts-6.5)
-
Foundations Sprint 99
Description
As a user I want to abort GET-requests of large content without the http-server crashing.
Actual:
Http GETing a large content from at HttpServer instance can crash the program using the httpserver, when the user closes the socket during transfer of chunks.
Expected:
Http GETing and closing the connection during chunked transfer does not crash the httpserver.
Attached patch fixes the issue for me.
Attachments
For Gerrit Dashboard: QTBUG-121219 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
532040,2 | Fix crash on remote closing conn. in GET of chunked content | dev | qt/qthttpserver | Status: ABANDONED | -1 | 0 |
532063,3 | IOChunkedTransfer: Check that `sink` and `source` are not null before using them | dev | qt/qthttpserver | Status: MERGED | +2 | 0 |
532384,2 | IOChunkedTransfer: Check that `sink` and `source` are not null before using them | 6.7 | qt/qthttpserver | Status: MERGED | +2 | 0 |
532569,2 | IOChunkedTransfer: Check that `sink` and `source` are not null before using them | 6.6 | qt/qthttpserver | Status: MERGED | +2 | 0 |
532663,2 | IOChunkedTransfer: Check that `sink` and `source` are not null before using them | 6.5 | qt/qthttpserver | Status: ABANDONED | +1 | 0 |
534610,2 | IOChunkedTransfer: Check that `sink` and `source` are not null before using them | tqtc/lts-6.5 | qt/tqtc-qthttpserver | Status: MERGED | +2 | 0 |