IOChunkedTransfer: Check that `sink` and `source` are not null before using them

Those QPointers are pointing to devices that can be destroyed early,
for example if a connection was closed before the transfer has completed.

This fixes a potential crash.

Fixes: QTBUG-121219
Pick-to: 6.7 6.6 6.5
Change-Id: I255176d1779dd49cb0447ee72d78a3f6e25d5ccd
Reviewed-by: Andre Vehreschild <vehre@badgersystems.de>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>